--- a/index.html
+++ b/index.html
@@ -87,16 +87,53 @@
     <section id="section3" class="container-fluid scrollsection skills sticky2">
       <center><p class="mt-10"><span class="marker" style="font-size:2rem;">&lth1&gt</span> SKILLS <span class="marker" style="font-size:2rem;">&lt/h1&gt</span></p></center>
       <div class="row fillheight d-flex align-items-center justify-content-center">
-        <div id="skillsleft" class="col-md-3 rainbowbox">
-
+        <div id="skillsleft" class="col-md-3 rainbowbox d-flex align-items-center flex-column">
+          <img class="mt-5" src="assets/Front-End Icon.svg" alt="Front-end">
+          <span class="skills_header"><p>FRONT END</p></span>
+          <ul class="skillslist d-flex align-items-center flex-column">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Bootstrap</li>
+            <li>Javascript</li>
+            <li>Jquery</li>
+            <li>Dash</li>
+          </ul>
+          <ul class="learninglist d-flex align-items-center flex-column mt-auto">
+            <li><span class="listheader">Learning</span></li>
+            <li>React</li>
+          </ul>
         </div>
         
-        <div id="skillsmiddle" class="col-md-3 rainbowbox">
+        <div id="skillsmiddle" class="col-md-3 rainbowbox d-flex align-items-center flex-column">
+          <img class="mt-5" src="assets/Back-End Icon.svg" alt="Front-end">
+          <span class="skills_header"><p>BACK END</p></span>
+          <ul class="skillslist d-flex align-items-center flex-column">
+            <li>PHP</li>
+            <li>MySQL</li>
+            <li>MongoDB</li>
+            <li>Python</li>
 
+          </ul>
+          <ul class="learninglist d-flex align-items-center flex-column mt-auto">
+            <li><span class="listheader">Learning</span></li>
+            <li>Express Js</li>
+            <li>Node Js</li>
+          </ul>
         </div>
-        <div id="skillsright" class="col-md-3 rainbowbox">
+        <div id="skillsright" class="col-md-3 rainbowbox d-flex align-items-center  flex-column">
+          <img class="mt-5" src="assets/Design Icon.svg" alt="Design">
+          <span class="skills_header"><p>DESIGN</p></span>
+          <ul class="skillslist d-flex align-items-center flex-column">
+            <li>Photoshop</li>
+            <li>Fusion 360</li>
+          </ul>
+          <ul class="learninglist d-flex align-items-center flex-column mt-auto">
+            <li><span class="listheader">Learning</span></li>
+            <li>Illustrator</li>
+            <li>Figma</li>
+          </ul>
+        </div>
 
-        </div>
       </div>
       <div id="section3end"></div>
     </section>
