--- a/index.html
+++ b/index.html
@@ -179,6 +179,28 @@
     <div id="section4end"></div>
     </section>
 
-  <script src="js/scrollingpannel.js">
-  </script>
+  <script src="js/scrollingpannel.js"></script>
+  <section class="d-flex align-items-center justify-content-center container-fluid footer">
+    <div class="row d-flex align-items-start justify-content-center footer_wrapper">
+      <div class="footer_wrappers col-md-3">
+        <span class="rainbow_r footerheader"><p>Ben McIlveen</p></span>
+        <ul>
+          <li><a href="#section1">Home</a></li>
+          <li><a href="#section2">About</a></li>
+          <li><a href="#section3">Skills</a></li>
+          <li><a href="#section4">Work</a></li>
+        </ul>
+      </div>
+      <div class="footer_wrappers col-md-3">
+        <span class="rainbow footerheader"><p>Contact Me</p></span>
+        <p>Got a new idea? <br> Feel free to contact me to discuss!</p>
+        <ul>
+          <li>E: benmcilveen.benacy@gmail.com</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  </body>
+
 </html>
