First prototype finsihed

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <div class="work_card_content d-flex align-items-center justify-content-start flex-column">
               <span class="work_card_content_type"><p>Website</p></span>
               <span class="work_card_content_heading"><p>Mazig Barbers</p></span>
-              <span class="work_card_content_text"><p>Text about each project goes here. Little bit infomation. Text about each project goes here. Little bit infomation. Text about each project goes here. Little bit infomation. Text about each project goes here. Little bit infomation.</p></span>
+              <span class="work_card_content_text"><p>Mazig Barbers was the first company I worked with to create their website. We worked closely for a number of weeks to create a page they were happy with, I took care of the development and hosting.</p></span>
             </div>
           </div>
           <div class="work_card">
@@ -154,7 +154,7 @@
             <div class="work_card_content d-flex align-items-center justify-content-start flex-column">
               <span class="work_card_content_type"><p>Website  UI/UX</p></span>
               <span class="work_card_content_heading"><p>AI For Good</p></span>
-              <span class="work_card_content_text"><p>Text about each project goes here. Little bit infomation. Text about each project goes here. Little bit infomation. Text about each project goes here. Little bit infomation. Text about each project goes here. Little bit infomation.</p></span>
+              <span class="work_card_content_text"><p>During the first Covid-19 lockdown, I completed work experience with the AI For Good team and Deutsche Bank. Their simulation developed in python needed a front-end website for their clients. I helped with the creation of pages in conjunction with the UI team.</p></span>
             </div>
           </div>
           <div class="work_card">
@@ -162,7 +162,7 @@
             <div class="work_card_content d-flex align-items-center justify-content-start flex-column">
               <span class="work_card_content_type"><p>Graphic Design</p></span>
               <span class="work_card_content_heading"><p>Benjamin Henry</p></span>
-              <span class="work_card_content_text"><p>Text about each project goes here. Little bit infomation. Text about each project goes here. Little bit infomation. Text about each project goes here. Little bit infomation. Text about each project goes here. Little bit infomation.</p></span>
+              <span class="work_card_content_text"><p>Benjamin Henry was a men's leather goods project a friend and I started. I created initial mock-ups from scratch in Photoshop, creating realistic leather wallets.</p></span>
             </div>
           </div>
           <div class="work_card">
@@ -170,7 +170,7 @@
             <div class="work_card_content d-flex align-items-center justify-content-start flex-column">
               <span class="work_card_content_type"><p>Web Application and Product</p></span>
               <span class="work_card_content_heading"><p>StatBoard</p></span>
-              <span class="work_card_content_text"><p>Text about each project goes here. Little bit infomation. Text about each project goes here. Little bit infomation. Text about each project goes here. Little bit infomation. Text about each project goes here. Little bit infomation.</p></span>
+              <span class="work_card_content_text"><p>StatBoard is a personal project of mine which aims to connect custom climbing training tools to an interactive web application. Giving users direct feedback on the climbing progression, without the need for a professional.</p></span>
             </div>
           </div>
           
