--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 
           <div id="aboutmeparagraph" >
             <div id="about_firstline"><p style="font-size: 4rem;">Hi,<br> I'm <span class="rainbow">Ben McIlveen</span></p><br></div>
-            <div id="about_secondline"><p>A <span class="rainbow">Front End Developer</span> from the north west, I’m currently studying <span class="rainbow">computer science</span>.</p></div><br>
-            <div id="about_thirdline"><p>During my spair time, I help businesses turn their online <span class="rainbow">ideas</span> into <span class="rainbow">reality</span>.</p></div>
+            <div id="about_secondline"><p>A <span class="rainbow">Front End Developer</span> from the North West, I’m currently studying <span class="rainbow">computer science</span>.</p></div><br>
+            <div id="about_thirdline"><p>During my spare time, I help businesses turn their online <span class="rainbow">ideas</span> into <span class="rainbow">reality</span>.</p></div>
           </div>
 
         </div>
@@ -150,7 +150,7 @@
             </div>
           </div>
           <div class="work_card">
-            <div class="work_card_image" style="background-image: url('assets/aiforgood.png');"></div>
+            <div class="work_card_image" style="background-image: url('assets/aiforgood.png);"></div>
             <div class="work_card_content d-flex align-items-center justify-content-start flex-column">
               <span class="work_card_content_type"><p>Website  UI/UX</p></span>
               <span class="work_card_content_heading"><p>AI For Good</p></span>
