--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             </div>
           </div>
           <div class="work_card">
-            <div class="work_card_image" style="background-image: url('assets/aiforgood.png);"></div>
+            <div class="work_card_image" style="background-image: url('assets/aiforgood.png');"></div>
             <div class="work_card_content d-flex align-items-center justify-content-start flex-column">
               <span class="work_card_content_type"><p>Website  UI/UX</p></span>
               <span class="work_card_content_heading"><p>AI For Good</p></span>
