--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </script>
   </head>
   <body>
-
+    <!-- <div class="static"></div> -->
     <div class="navigation_wrapper">
       <a id="section1click" href="#section1end"><div id="navpage_1" class="navigation"></div></a>
       <a id="section2click" href="#section2end"><div id="navpage_2" class="navigation"></div>
